<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_sign_in_page"
            android:name="com.example.android.sengledsmartlightapplication.SignInPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="50dp">

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="112dp"
                android:layout_height="51dp"
                android:layout_marginStart="156dp"
                android:layout_marginBottom="52dp"
                android:text="@string/sing_in_text"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/enter_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.994" />

            <TextView
                android:id="@+id/title_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="28dp"
                android:text="@string/sengled_title_page"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.857" />


            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="420dp"
                android:layout_marginEnd="160dp"
                android:text="@string/Submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="77dp"
                android:layout_height="47dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="296dp"
                android:text="@string/enter_username"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/password"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginStart="60dp"
                android:text="@string/enter_password"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />

            <EditText
                android:id="@+id/enter_password"
                android:layout_width="214dp"
                android:layout_height="47dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/text_bg"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintStart_toEndOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/enter_username" />

            <EditText
                android:id="@+id/enter_username"
                android:layout_width="214dp"
                android:layout_height="47dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="284dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@drawable/text_bg"
                app:layout_constraintStart_toEndOf="@+id/username"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>