<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="444dp"
        android:layout_height="444dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/diamond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_title"
        android:layout_width="143dp"
        android:layout_height="56dp"
        android:layout_marginTop="172dp"
        android:text="@string/contact"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/information_text2"
        android:layout_width="283dp"
        android:layout_height="205dp"
        android:layout_marginTop="60dp"
        android:text="@string/contact_paragraph"
        android:textAlignment="center"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_title" />

    <Button
        android:id="@+id/contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/contact_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_EmailAddress" />

    <EditText
        android:id="@+id/contact_EmailAddress"
        android:layout_width="217dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/information_text2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="71dp"
        android:layout_height="41dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="Email:"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_text2" />

    <EditText
        android:id="@+id/contact_comment"
        android:layout_width="318dp"
        android:layout_height="113dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:inputType="textLongMessage|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_EmailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>